# Contests

./: .gitignore  .lazy.lua  .rgignore  README.org
Codeforces/CF1002/: a.cpp  b.cpp
Codeforces/CF1005/: b.cpp  c.cpp  e.cpp
Codeforces/CF1014/: a.cpp  b.cpp  c.cpp  d.cpp
Codeforces/CF714/: a.cpp  b.cpp  c.cpp  e.cpp
Codeforces/CF722/: a.cpp  b.cpp  c.cpp
Codeforces/CF722/samples/: e-2.out  f-3.out  f-4.in  f-4.out
Codeforces/CF723/: a.cpp  b.cpp  c1.cpp  c2.cpp  d.cpp
Codeforces/CF723/samples/: d-0.in  d-0.out  e-0.in  e-1.in  e-2.in  e-2.out  e-3.in  f-0.in  f-0.out
Codeforces/Deltix-2021/: a.cpp  b.cpp  c.cpp
Codeforces/Educational-Round-103/: a.cpp  b.cpp  c.cpp
Codeforces/Educational-Round-103/samples/: a-0.out  c-0.in  d-0.in  d-0.out  e-0.out  e-1.in  e-2.in  f-0.in  f-0.out  g-0.in  g-0.out
Codeforces/SWERC-2020/: a.cpp  c.cpp  d.cpp  e.cpp  i.cpp  k.cpp
Codeforces/SWERC-2020/samples/: a-0.in  a-0.out  a-1.in  a-1.out  b-0.in  c-0.in  d-1.in  g-0.out  g-1.in  g-1.out  h-0.in  j-0.in  j-1.in  l-0.in  m-0.in  m-1.in
cli/: .gitignore  ___setup.py  pyproject.toml  setup.py
cli/cputils/: __main__.py  cf_sample_gen.py  codeforces_gen.py  dbrun.py  runsamples.py  utils.py
libs/: cf_template.cpp  cf_template_cases.cpp  modint.h
libs/data/: dsu.h  fenwick.h  lazy_segtree.h  rmq.h  segtree.h
libs/graph/: dijkstra.h
